# vize

./: .gitignore  .gitmodules  Cargo.toml  README.md  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-playground.yml  release.yml
bench/: generate.mjs  run.ts
crates/vize/: Cargo.toml  README.md
crates/vize/src/: main.rs
crates/vize_armature/: Cargo.toml  README.md
crates/vize_armature/src/: lib.rs  parser.rs  tokenizer.rs
crates/vize_atelier_core/: Cargo.toml  README.md
crates/vize_atelier_core/src/: codegen.rs  lib.rs  transform.rs
crates/vize_atelier_dom/: Cargo.toml  README.md
crates/vize_atelier_dom/src/: lib.rs  options.rs
crates/vize_atelier_sfc/: Cargo.toml  README.md
crates/vize_atelier_sfc/benches/: sfc_parse.rs
crates/vize_atelier_sfc/src/: compile.rs  compile_template.rs  (+4 more)
crates/vize_atelier_vapor/: Cargo.toml  README.md
crates/vize_canon/: Cargo.toml  README.md
crates/vize_carton/: Cargo.toml  README.md
crates/vize_croquis/: Cargo.toml
crates/vize_glyph/: Cargo.toml  README.md
crates/vize_maestro/: Cargo.toml  README.md
crates/vize_musea/: Cargo.toml  README.md
crates/vize_patina/: Cargo.toml  README.md
crates/vize_relief/: Cargo.toml  README.md
crates/vize_vitrine/: Cargo.toml  README.md
crates/vue_allocator/: Cargo.toml
crates/vue_allocator/src/: allocator.rs  clone_in.rs  lib.rs
crates/vue_bindings/: Cargo.toml
crates/vue_compiler_cli/: Cargo.toml
crates/vue_compiler_core/: Cargo.toml
crates/vue_compiler_dom/: Cargo.toml
crates/vue_compiler_dom/src/: lib.rs  options.rs
crates/vue_compiler_dom/src/transforms/: v_html.rs  v_model.rs  v_on.rs  v_show.rs  v_text.rs
crates/vue_compiler_sfc/: Cargo.toml
crates/vue_compiler_vapor/: Cargo.toml
crates/vue_compiler_vapor/src/: generate.rs  ir.rs  lib.rs  transform.rs
crates/vue_compiler_vapor/src/generators/: directive.rs
crates/vue_compiler_vapor/src/transforms/: element.rs  transform_slot.rs  transform_text.rs  v_bind.rs  v_for.rs  v_if.rs  v_model.rs  v_on.rs  v_show.rs
crates/vue_shared/: Cargo.toml
crates/vue_shared/src/: general.rs
docs/: package.json
docs/content/: index.md
docs/theme/: style.css
e2e/: package.json  playwright.config.ts  smoke.spec.ts
e2e/_helpers/: apps.ts  assertions.ts  server.ts
e2e/atelier-sfc/: elk.ts  misskey.ts  npmx.ts  vuefes.ts
e2e/canon/: elk.ts  misskey.ts  npmx.ts  vuefes.ts
e2e/patina/: elk.ts  misskey.ts  npmx.ts  vuefes.ts
e2e/vite-build-preview/: elk.ts  misskey.ts  npmx.ts  vuefes.ts
e2e/vite-dev/: elk.spec.ts  misskey.spec.ts  npmx.spec.ts  vuefes.spec.ts
examples/vite-musea/: vite.config.ts
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-arm64/: package.json
npm/cli-win32-x64/: package.json
npm/fresco/: package.json
npm/fresco-native/: package.json
npm/musea-mcp-server/: package.json
npm/musea-nuxt/: package.json
npm/nuxt/: package.json
npm/ui/: package.json
npm/vite-plugin-musea/: gallery-vite.config.ts  package.json
npm/vite-plugin-vize/: README.md  package.json
npm/vize/: package.json
npm/vize-native/: index.d.ts  package.json
npm/vize-wasm/: package.json
npm/vscode-art/: README.md  package.json
npm/vscode-vize/: README.md  package.json
playground/: README.md  index.html  oxlint.json  package.json  pnpm-lock.yaml  vite.config.ts
playground/e2e/: edge-cases.test.ts  sfc-compile.test.ts
playground/src/: App.vue  presets.ts  styles.css
scripts/: pre-commit  release.sh
tests/vize_test_runner/: Cargo.toml
tests/vue_test_runner/: Cargo.toml
(+569 files in other folders)
