[package]
name = "vue_allocator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arena allocator for vue-compiler-rs, wrapping bumpalo"

[dependencies]
bumpalo = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serialize = ["serde"]
