[package]
name = "vue_compiler_dom"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vue_allocator = { workspace = true }
vue_shared = { workspace = true }
vue_compiler_core = { workspace = true }

phf = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
