[package]
name = "vue_compiler_vapor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vue_allocator = { workspace = true }
vue_shared = { workspace = true }
vue_compiler_core = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
